# geohealth-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GEOHEALTH_ALLSTATESPLAN.md  LICENSE  PLAN.md  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  data-dictionary.md  errors.md  etl-runbook.md  index.md  methodology.md  quickstart.md  sdk.md
dpc-market-fit/: Dockerfile  dpc-market-fit-api-spec.txt  requirements.txt
dpc-market-fit/app/: config.py  main.py
dpc-market-fit/app/data/: hpsa_primary_care.csv  npi_taxonomy_config.json  npi_tract_counts.csv  providers_GA.csv  providers_KS.csv  providers_MN.csv  providers_MO.csv  scoring_weights.json
dpc-market-fit/app/models/: enums.py  request.py  response.py
dpc-market-fit/app/routers/: competition.py  demand.py  employer.py  market_fit.py  providers.py  supply.py
dpc-market-fit/app/services/: cdc_places.py  cdc_svi.py  census_acs.py  census_cbp.py  geocoder.py  hrsa_hpsa.py  npi_registry.py  npi_tract_lookup.py  provider_lookup.py  scoring.py
dpc-market-fit/app/utils/: cache.py  normalization.py
dpc-market-fit/etl/: load_npi_tract.py
dpc-market-fit/etl/data/: .gitignore
dpc-market-fit/tests/: conftest.py  test_endpoints.py  test_etl_npi_tract.py  test_fallbacks.py  test_geocoder.py  test_npi_tract_lookup.py  test_providers.py  test_scoring.py
geohealth/: config.py  logging_config.py
geohealth-ui/: .env.local.example  package.json  pnpm-lock.yaml  tailwind.config.ts
geohealth-ui/app/: globals.css  layout.tsx  page.tsx
geohealth-ui/app/methodology/: page.tsx
geohealth-ui/components/charts/: MetricBar.tsx  (+4 more)
geohealth-ui/lib/: data-sources.ts  store.ts  use-toast.ts  utils.ts
geohealth/api/: auth.py  dependencies.py  exception_handlers.py  llms_content.py  main.py  middleware.py  schemas.py
geohealth/db/: models.py  session.py
geohealth/etl/: compute_sdoh_index.py  load_acs.py  load_all.py  load_epa.py  load_npi_providers.py  load_places.py  load_svi.py  load_tiger.py  load_trends.py  utils.py
geohealth/mcp/: __init__.py  __main__.py  server.py
geohealth/migrations/: env.py  script.py.mako
geohealth/sdk/: __init__.py  client.py  exceptions.py  models.py
geohealth/services/: cache.py  geocoder.py  metrics.py  narrator.py  rate_limiter.py  request_context.py  tract_lookup.py  tract_serializer.py  webhooks.py
scripts/: load_providers_standalone.py
tests/: conftest.py  test_auth.py  test_batch.py  test_cache.py  test_compare.py  test_context.py  test_demographics.py  test_dictionary.py  test_exception_handlers.py  test_geocoder.py  test_geojson.py  test_llms_txt.py  test_load_all.py  test_logging_config.py  test_mcp.py  test_metrics.py  test_middleware.py  test_narrator.py  test_nearby.py  test_observability.py  test_providers.py  test_request_context.py  test_sdk.py  test_stats.py  test_trends.py  test_webhooks.py
(+42 files in other folders)
