[project]
name = "geohealth-api"
version = "0.1.0"
description = "Geographic Health Intelligence API — census-tract-level social determinants of health"
readme = "README.md"
license = "MIT"
authors = [{name = "Russell Stover"}]
keywords = [
    "census", "demographics", "health", "sdoh", "social-determinants",
    "gis", "census-tract", "svi", "places", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "geoalchemy2>=0.15,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
    "anthropic>=0.39,<1",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "gunicorn>=22,<24",
]

[project.optional-dependencies]
etl = [
    "geopandas>=0.14,<2",
    "shapely>=2.0,<3",
    "fiona>=1.9,<2",
    "pandas>=2.0,<3",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.3,<1",
]
mcp = [
    "mcp>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/RussellStover1983/geohealth-api"
Repository = "https://github.com/RussellStover1983/geohealth-api"
Documentation = "https://russellstover1983.github.io/geohealth-api/"
Issues = "https://github.com/RussellStover1983/geohealth-api/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
